--- a/src/main/resources/jiraTimetracker.properties
+++ b/src/main/resources/jiraTimetracker.properties
@@ -19,6 +19,10 @@
 # MA 02110-1301  USA
 #
 
+# The sender email address (noreply@everit.biz)
+EMAIL_SENDER=noreply@everit.biz
+# The number of minutes after midnight to check the worklogs and notify the issues reporter 
+ISSUE_CHECK_TIME=1200
 # Dates in ISO-8601 format (e.g. 2012-12-15) when worklog checking is switched OFF (weekends exlcuded automatically)
 #EXCLUDE_DATES=2013-01-01,2013-03-15,2013-04-01,2013-05-01,2013-05-20,2013-08-19,2013-08-20,2013-10-23,2013-11-01,2013-12-24,2013-12-25,2013-12-26,2013-12-27,2014-01-01
 EXCLUDE_DATES=2013-03-01
