Fixed non working issues texts in settings and jttp vm. added default non working issues from properties file

--- a/src/main/resources/jiraTimetracker.properties
+++ b/src/main/resources/jiraTimetracker.properties
@@ -29,4 +29,5 @@ EXCLUDE_DATES=2013-03-01
 # Dates in ISO-8601 format (e.g. 2012-12-15) when worklog checking is switched ON
 #INCLUDE_DATES=2013-08-24,2013-12-07,2013-12-212013-08-24,2013-12-07,2013-12-21
 INCLUDE_DATES=2013-03-02
-
+#Default Non working issues
+NON_WORKING_ISSUES=NOWORK-1,NOWORK-2,NOWORK-3
