--- a/src/main/resources/jiraTimetracker.properties
+++ b/src/main/resources/jiraTimetracker.properties
@@ -24,8 +24,8 @@ EMAIL_SENDER=noreply@everit.biz
 # The number of minutes after midnight to check the worklogs and notify the issues reporter 
 ISSUE_CHECK_TIME=1200
 # Dates in ISO-8601 format (e.g. 2012-12-15) when worklog checking is switched OFF (weekends exlcuded automatically)
-EXCLUDE_DATES=2013-01-01,2013-03-15,2013-04-01,2013-05-01,2013-05-20,2013-08-19,2013-08-20,2013-10-23,2013-11-01,2013-12-24,2013-12-25,2013-12-26,2013-12-27,2014-01-01
+EXCLUDE_DATES=2012-01-01,2012-03-15,2012-03-16,2012-04-09,2012-04-30,2012-05-01,2012-05-28,2012-08-20,2012-10-22,2012-10-23,2012-11-01,2012-11-02,2012-12-24,2012-12-25,2012-12-26,2013-01-01,2013-03-15,2013-04-01,2013-05-01,2013-05-20,2013-08-19,2013-08-20,2013-10-23,2013-11-01,2013-12-24,2013-12-25,2013-12-26,2013-12-27,2014-01-01
 # Dates in ISO-8601 format (e.g. 2012-12-15) when worklog checking is switched ON
-INCLUDE_DATES=2013-08-24,2013-12-07,2013-12-212013-08-24,2013-12-07,2013-12-21
+INCLUDE_DATES=2012-03-24,2012-05-05,2012-10-27,2012-11-10,2012-12-15,2013-08-24,2013-12-07,2013-12-21,2013-08-24,2013-12-07,2013-12-21
 #Default Non working issues
 NON_WORKING_ISSUES=NOWORK-1,NOWORK-2,NOWORK-3
