--- a/src/main/resources/jiraTimetracker.properties
+++ b/src/main/resources/jiraTimetracker.properties
@@ -29,3 +29,5 @@ EXCLUDE_DATES=2012-01-01,2012-03-15,2012-03-16,2012-04-09,2012-04-30,2012-05-01,
 INCLUDE_DATES=2012-03-24,2012-05-05,2012-10-27,2012-11-10,2012-12-15,2013-08-24,2013-12-07,2013-12-21,2013-08-24,2013-12-07,2013-12-21
 #Default Non working issues
 NON_WORKING_ISSUES=NOWORK-1,NOWORK-2,NOWORK-3
+#Default Collector issues
+COLLECTOR_ISSUES=NOWORK-1,NOWORK-2,NOWORK-3
