--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <groupId>org.everit.jira.timetracker</groupId>
     <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <packaging>bundle</packaging>
 	
