Fixed an issue where the 31th days of months that contained work logs were not highlighted.

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 						</Import-Package>
 						<Export-Package />
 						<_failok>true</_failok>
+						<Embed-Dependency>usercompatibility-jira</Embed-Dependency>
 					</instructions>
 					<log4jProperties>src/main/resources/log4j.properties</log4jProperties>
 				</configuration>
