--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>1.2.1</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
 
