--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
 
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.4.0</version>
 
   <packaging>bundle</packaging>
 
@@ -162,42 +162,16 @@
       <artifactId>jira-core</artifactId>
       <version>4.4</version>
       <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>jndi</groupId>
+          <artifactId>jndi</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
   <repositories>
-    <repository>
-      <id>everit.groups.public</id>
-      <name>Everit Public Repository Group</name>
-      <url>http://repository.everit.biz/nexus/content/groups/public</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>everit.groups.proxy</id>
-      <name>Everit Proxy Repository Group</name>
-      <url>http://repository.everit.biz/nexus/content/groups/proxy</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>atlassian</id>
-      <url>http://repository.atlassian.com/maven2/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
     <repository>
       <id>3dparty</id>
       <url>https://maven.atlassian.com/3rdparty</url>
@@ -222,30 +196,5 @@
       </releases>
     </repository>
   </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>everit.groups.public</id>
-      <name>Everit Public Repository Group</name>
-      <url>http://repository.everit.biz/nexus/content/groups/public</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-    <pluginRepository>
-      <id>everit.groups.proxy</id>
-      <name>Everit Proxy Repository Group</name>
-      <url>http://repository.everit.biz/nexus/content/groups/proxy</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
 
 </project>
