--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
 
-  <version>1.4.0</version>
+  <version>1.4.1-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
 
