--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.everit</groupId>
-    <artifactId>oss</artifactId>
-    <version>4</version>
+    <groupId>org.everit.config</groupId>
+    <artifactId>org.everit.config.oss</artifactId>
+    <version>5.0.2</version>
   </parent>
 
   <groupId>org.everit.jira.timetracker</groupId>
@@ -42,6 +42,7 @@
     <jira.version>6.2.5</jira.version>
     <jira.data.version>6.2.5</jira.data.version>
     <projectpath>jira-timetracker-plugin</projectpath>
+    <license.skip>true</license.skip>
   </properties>
 
   <scm>
@@ -97,6 +98,20 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.15</version>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>jmxri</artifactId>
+      		<groupId>com.sun.jmx</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jmxtools</artifactId>
+      		<groupId>com.sun.jdmk</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jms</artifactId>
+      		<groupId>javax.jms</groupId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -112,6 +127,12 @@
       <groupId>com.atlassian.ofbiz</groupId>
       <artifactId>entityengine</artifactId>
       <version>1.0.3</version>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>jta</artifactId>
+      		<groupId>jta</groupId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>opensymphony</groupId>
@@ -165,6 +186,10 @@
         <exclusion>
           <groupId>jndi</groupId>
           <artifactId>jndi</artifactId>
+        </exclusion>
+        <exclusion>
+        	<artifactId>jta</artifactId>
+        	<groupId>jta</groupId>
         </exclusion>
       </exclusions>
     </dependency>
