--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>5.0.2</version>
+    <version>6.0.3</version>
   </parent>
 
   <groupId>org.everit.jira.timetracker</groupId>
@@ -43,6 +43,8 @@
     <jira.data.version>6.2.5</jira.data.version>
     <projectpath>jira-timetracker-plugin</projectpath>
     <license.skip>true</license.skip>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <scm>
