--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
 
-  <version>1.4.1-SNAPSHOT</version>
+  <version>1.4.1</version>
 
   <packaging>bundle</packaging>
 
@@ -36,8 +36,8 @@
     <jira.version>4.0.1</jira.version>
     <jira.data.version>4.0</jira.data.version>
     <projectpath>jira-timetracker-plugin</projectpath>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
     <findbugs.failOnError>false</findbugs.failOnError>
   </properties>
 
