--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>2.1.1</version>
+  <version>2.1.2-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
 
