--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,12 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>7.0.1</version>
-    <relativePath></relativePath>
+    <version>7.1.0</version>
   </parent>
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>2.2.0-SNAPSHOT</version>
 
   <packaging>bundle</packaging>
 
@@ -55,8 +54,8 @@
     </site>
   </distributionManagement>
   <ciManagement>
-    <system>Jenkins</system>
-    <url>https://ci.everit.biz/jenkins/job/${projectpath}</url>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/everit-org/${projectpath}</url>
   </ciManagement>
   <issueManagement>
     <system>GitHub</system>
@@ -96,18 +95,18 @@
       <artifactId>log4j</artifactId>
       <version>1.2.15</version>
       <exclusions>
-      	<exclusion>
-      		<artifactId>jmxri</artifactId>
-      		<groupId>com.sun.jmx</groupId>
-      	</exclusion>
-      	<exclusion>
-      		<artifactId>jmxtools</artifactId>
-      		<groupId>com.sun.jdmk</groupId>
-      	</exclusion>
-      	<exclusion>
-      		<artifactId>jms</artifactId>
-      		<groupId>javax.jms</groupId>
-      	</exclusion>
+        <exclusion>
+          <artifactId>jmxri</artifactId>
+          <groupId>com.sun.jmx</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>jmxtools</artifactId>
+          <groupId>com.sun.jdmk</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>jms</artifactId>
+          <groupId>javax.jms</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -125,10 +124,10 @@
       <artifactId>entityengine</artifactId>
       <version>1.0.3</version>
       <exclusions>
-      	<exclusion>
-      		<artifactId>jta</artifactId>
-      		<groupId>jta</groupId>
-      	</exclusion>
+        <exclusion>
+          <artifactId>jta</artifactId>
+          <groupId>jta</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -185,8 +184,8 @@
           <artifactId>jndi</artifactId>
         </exclusion>
         <exclusion>
-        	<artifactId>jta</artifactId>
-        	<groupId>jta</groupId>
+          <artifactId>jta</artifactId>
+          <groupId>jta</groupId>
         </exclusion>
       </exclusions>
     </dependency>
