--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,22 @@
         </configuration>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/atlassian-plugin.xml</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/atlassian-plugin.xml</exclude>
+        </excludes>
+      </resource>
+    </resources>
   </build>
 
   <dependencies>
