--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <filtering>true</filtering>
         <includes>
           <include>**/atlassian-plugin.xml</include>
+          <include>**/jttp_build.properties</include>
         </includes>
       </resource>
       <resource>
@@ -95,6 +96,7 @@
         <filtering>false</filtering>
         <excludes>
           <exclude>**/atlassian-plugin.xml</exclude>
+          <exclude>**/jttp_build.properties</exclude>
         </excludes>
       </resource>
     </resources>
