--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -16,3 +16,8 @@
 
 # The feedback email to
 FEEDBACK_EMAIL_TO=${feedback.email}
+PIWIK_HOST=${piwik.host}
+PIWIK_TIMETRACKER_SITEID=${piwik.timetracker.siteid}
+PIWIK_WORKLOGS_SITEID=${piwik.worklogs.siteid}
+PIWIK_CHART_SITEID=${piwik.chart.siteid}
+PIWIK_TABLE_SITEID=${piwik.table.siteid}
