Added jttp prefix to build properties.

--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -15,9 +15,9 @@
 #
 
 # The feedback email to
-FEEDBACK_EMAIL_TO=${feedback.email}
-PIWIK_HOST=${piwik.host}
-PIWIK_TIMETRACKER_SITEID=${piwik.timetracker.siteid}
-PIWIK_WORKLOGS_SITEID=${piwik.worklogs.siteid}
-PIWIK_CHART_SITEID=${piwik.chart.siteid}
-PIWIK_TABLE_SITEID=${piwik.table.siteid}
+FEEDBACK_EMAIL_TO=${jttp.feedback.email}
+PIWIK_HOST=${jttp.piwik.host}
+PIWIK_TIMETRACKER_SITEID=${jttp.piwik.timetracker.siteid}
+PIWIK_WORKLOGS_SITEID=${jttp.piwik.worklogs.siteid}
+PIWIK_CHART_SITEID=${jttp.piwik.chart.siteid}
+PIWIK_TABLE_SITEID=${jttp.piwik.table.siteid}
