--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -14,8 +14,8 @@
 # limitations under the License.
 #
 
-PIWIK_HOST=${piwik.host}
-PIWIK_TIMETRACKER_SITEID=${piwik.timetracker.siteid}
-PIWIK_WORKLOGS_SITEID=${piwik.worklogs.siteid}
-PIWIK_CHART_SITEID=${piwik.chart.siteid}
-PIWIK_TABLE_SITEID=${piwik.table.siteid}
+PIWIK_HOST=${jttp.piwik.host}
+PIWIK_TIMETRACKER_SITEID=${jttp.piwik.timetracker.siteid}
+PIWIK_WORKLOGS_SITEID=${jttp.piwik.worklogs.siteid}
+PIWIK_CHART_SITEID=${jttp.piwik.chart.siteid}
+PIWIK_TABLE_SITEID=${jttp.piwik.table.siteid}
