--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
 
-  <version>1.4.2-SNAPSHOT</version>
+  <version>1.4.2</version>
 
   <packaging>bundle</packaging>
 
