--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,32 @@
           <log4jProperties>src/main/resources/log4j.properties</log4jProperties>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-jira-plugin</artifactId>
+        <version>6.2.3</version>
+        <extensions>false</extensions>
+        <executions>
+          <execution>
+            <id>generate-obr-artifact</id>
+            <phase>package</phase>
+            <goals>
+              <goal>generate-obr-artifact</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <pluginDependencies>
+            <pluginDependency>
+              <groupId>org.everit.jira</groupId>
+              <artifactId>jira-querydsl-support</artifactId>
+            </pluginDependency>
+          </pluginDependencies>
+          <instructions>
+            <_manifest>${project.build.outputdirectory}/META-INF/MANIFEST.MF</_manifest>
+          </instructions>
+        </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
@@ -142,7 +168,7 @@
       <artifactId>jira-api</artifactId>
       <version>${jira.version}</version>
       <scope>provided</scope>
-       <exclusions>
+      <exclusions>
         <exclusion>
           <groupId>jndi</groupId>
           <artifactId>jndi</artifactId>
@@ -192,8 +218,28 @@
       <artifactId>gson</artifactId>
       <version>2.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.everit.jira</groupId>
+      <artifactId>jira-querydsl-support</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>atlassian-public</id>
+      <url>https://maven.atlassian.com/repository/public</url>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+    </pluginRepository>
+  </pluginRepositories>
   <repositories>
     <repository>
       <id>atlassian-public</id>
