--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             </Import-Package>
             <Export-Package />
             <_failok>true</_failok>
-            <Embed-Dependency>sal-api;gson;</Embed-Dependency>
+            <Embed-Dependency>sal-api;gson;poi;</Embed-Dependency>
           </instructions>
           <log4jProperties>src/main/resources/log4j.properties</log4jProperties>
         </configuration>
@@ -234,6 +234,11 @@
       <artifactId>jsr311-api</artifactId>
       <version>1.1.1</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.14</version>
     </dependency>
   </dependencies>
 
