send analytics when change analytics status. Some code refactor. Code clean.

--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -21,3 +21,4 @@ PIWIK_TIMETRACKER_SITEID=${jttp.piwik.timetracker.siteid}
 PIWIK_WORKLOGS_SITEID=${jttp.piwik.worklogs.siteid}
 PIWIK_CHART_SITEID=${jttp.piwik.chart.siteid}
 PIWIK_TABLE_SITEID=${jttp.piwik.table.siteid}
+PIWIK_ADMINISTRATION_SITEID=${jttp.piwik.administration.siteid}
