Added Issue Collector script and build properties.

--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -22,3 +22,4 @@ PIWIK_WORKLOGS_SITEID=${jttp.piwik.worklogs.siteid}
 PIWIK_CHART_SITEID=${jttp.piwik.chart.siteid}
 PIWIK_TABLE_SITEID=${jttp.piwik.table.siteid}
 PIWIK_ADMINISTRATION_SITEID=${jttp.piwik.administration.siteid}
+ISSUE_COLLECTOR_SRC=${jtrp.issue.collectore.src}
