--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>2.5.0-SNAPSHOT</version>
+  <version>2.5.0-RC</version>
 
   <packaging>bundle</packaging>
 
