v2.x-JIRAPLUGIN-371-TIMETRACKER_INDICATOR
Event for tracking the use of the progress indicator.

--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -24,6 +24,7 @@ PIWIK_TABLE_SITEID=${jttp.piwik.table.siteid}
 PIWIK_ADMINISTRATION_SITEID=${jttp.piwik.administration.siteid}
 ISSUE_COLLECTOR_SRC=${jtrp.issue.collectore.src}
 PIWIK_REPORTING_SITEID=${jttp.piwik.reporting.siteid}
+PIWIK_USERSETTINGS_SITEID=${jttp.piwik.usersettings.siteid}
 PIWIK_SEARCHER_VALUE_CUSTOM_DIMENSION_INDEX=1
 PIWIK_ACTIVE_FILTER_CONDITION_CUSTOM_DIMENSION_INDEX=2
 PIWIK_USER_SELECTION_CUSTOM_DIMENSION_INDEX=3
