--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
     <projectpath>jira-timetracker-plugin</projectpath>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+    <build.time>${maven.build.timestamp}</build.time>
   </properties>
 
   <scm>
