--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>3.2.1-HOTFIX</version>
+  <version>3.2.1</version>
   <packaging>bundle</packaging>
 
   <properties>
