add dinamic survey solution.

--- a/src/main/resources/jttp_build.properties
+++ b/src/main/resources/jttp_build.properties
@@ -30,3 +30,5 @@ PIWIK_ACTIVE_FILTER_CONDITION_CUSTOM_DIMENSION_INDEX=2
 PIWIK_USER_SELECTION_CUSTOM_DIMENSION_INDEX=3
 PIWIK_SELECTED_WORKLOG_DETAIL_COLUMNS_CUSTOM_DIMENSION_INDEX=4
 PIWIK_SELECTED_ACTIVE_TAB_CUSTOM_DIMENSION_INDEX=5
+SURVEY_SCRIPT_URL=${jttp.popup.survey.script.url}
+SURVEY_FORM_URL=${jttp.popup.survey.form.url}
