v2.x-JIRAPLUGIN-415-BUG-TIME-ZONE
Finished the selected TimeZoneType based TimeZone settings.

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,9 @@
             <Import-Package>
               *
             </Import-Package>
-            <Export-Package />
+            <Export-Package>
+              org.everit.jira.settings;version=1.0.0
+            </Export-Package>
             <_failok>true</_failok>
             <Embed-Dependency>sal-api;gson;poi;</Embed-Dependency>
           </instructions>
