--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.jira.timetracker</groupId>
   <artifactId>org.everit.jira.timetracker.plugin</artifactId>
-  <version>3.4.3-SNAPSHOT</version>
+  <version>3.4.3-RC</version>
 
 
   <packaging>bundle</packaging>
